--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,11 +12,12 @@ requests = "2.31"
 
 
 [tool.poetry.group.dev.dependencies]
-pylint = "^2.17.5"
 mypy = "^1.5.1"
 ipykernel = "^6.25.2"
 pytest = "^7.4.2"
-flake8 = "^6.1.0"
+ruff = "^0.1.0"
+black = "^23.10.0"
+pre-commit = "^3.5.0"
 
 [build-system]
 requires = ["poetry-core"]
