--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,17 +24,16 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        python -m pip install --no-cache-dir .
 
-    - name: Install Poetry Action
-      uses: snok/install-poetry@v1.3.4
+    - name: Install rye
+      uses: sksat/setup-rye@v0.13.0
 
-    - name: Set up and run tests
+    - name: Run tests
       run: |
-        poetry install
-        poetry run pytest
+        rye run pytest
 
-    - name: Lint with Ruff
-      run: poetry run ruff .
-
-    - name: Format with Black
-      run: poetry run black .
+    - name: Lint and format
+      run: |
+      rye lint
+      rye fmt
