--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,8 @@ jobs:
 
     - name: Run tests and lint
       run: |
-        rye sync --no-lock
+        rye lock --features ci
+        rye sync --no-lock --no-dev
         rye run pytest
         rye lint
 
