--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ requires-python = ">= 3.11"
 
 [project.optional-dependencies]
 ci = [
-    "pytest>=8.0.0",
+    "pytest>=8.2.0",
 ]
 
 [build-system]
@@ -40,6 +40,7 @@ dev-dependencies = [
     "pandas>=2.2.0",
     "pandas-stubs>=2.1.4.231227",
     "pytest>=8.2.0",
+    "ipykernel>=6.29.4",
 ]
 
 [tool.hatch.metadata]
