--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,10 @@
 name: ci
 
+env:
+  UV_VERSION: "0.3.0"
+  UV_CACHE_DIR: /tmp/.uv-cache
+  UV_LINK_MODE: copy
+
 on:
   push:
     branches: [ "main" ]
@@ -8,32 +13,50 @@ on:
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
+    name: python-${{ matrix.os }}
+    
     strategy:
-      fail-fast: false
       matrix:
-        python-version: ["3.11", "3.12"]
+        os:
+          - ubuntu-latest
+          - windows-latest
+          - macos-latest
+      python-version: ["3.11", "3.12"]
+      fail-fast: false
+
+    runs-on: ${{ matrix.os }}
 
     steps:
     - uses: actions/checkout@v4
+
+    - name: Set up uv ${{ env.UV_VERSION }}
+      if: ${{ matrix.os == 'ubuntu-latest' || matrix.os == 'macos-latest' }}
+      run: curl -LsSf https://astral.sh/uv/${{ env.UV_VERSION }}/install.sh | sh
+
+    - name: Set up uv ${{ env.UV_VERSION }}
+      if: ${{ matrix.os == 'windows-latest' }}
+      run: irm https://astral.sh/uv/${{ env.UV_VERSION }}/install.ps1 | iex
+      shell: powershell
+
+    - name: Set up Python ${{ matrix.python-version }}
+      run: uv python install ${{ matrix.python-version }}
+
+    - name: Restore uv cache
+      uses: actions/cache@v4
+      with:
+        path: ${{ env.UV_CACHE_DIR }}
+        key: uv-${{ runner.os }}-${{ hashFiles('uv.lock') }}
+        restore-keys: |
+          uv-${{ runner.os }}-${{ hashFiles('uv.lock') }}
+          uv-${{ runner.os }}
     
-    - name: Install and setup rye
-      run: | 
-        curl -sSf https://rye.astral.sh/get | RYE_VERSION="0.37.0" RYE_TOOLCHAIN_VERSION="${{ matrix.python-version }}" RYE_INSTALL_OPTION="--yes" bash
-        echo "$HOME/.rye/shims" >> $GITHUB_PATH
+    - name: Install
+      run: uv sync --extra ci --no-dev --locked
 
-    - name: Pin ${{ matrix.python-version }}
+    - name: Run tests & build
       run: |
-        rye pin ${{ matrix.python-version }}
+        uv run pytest tests
+        uvx --from build pyproject-build --installer uv
 
-    - name: Test and lint
-      run: |
-        rye lock --features ci
-        rye sync --no-lock --no-dev
-        rye test
-        rye lint
-
-    - name: Build
-      run: |
-        rye build
+    - name: Minimize uv cache
+      run: uv cache prune --ci
