--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "pxwebpy"
-version = "0.3.1"
+version = "0.3.2"
 description = "Get data from PxWeb API easily."
 license = "MIT"
 repository = "https://github.com/stefur/pxwebpy/"
@@ -8,6 +8,8 @@ keywords = ["pxweb", "statistics", "dataframes", "pandas", "polars"]
 classifiers = [
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
 ]
@@ -18,7 +20,7 @@ dependencies = [
     "requests>=2.31.0",
 ]
 readme = "README.md"
-requires-python = ">= 3.11"
+requires-python = ">= 3.9"
 
 [project.urls]
 Repository = "https://github.com/stefur/pxwebpy"
