--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,5 @@
 name: ci
 
-env:
-  UV_VERSION: "0.4.9"
-  UV_CACHE_DIR: /tmp/.uv-cache
-  UV_LINK_MODE: copy
-
 on:
   push:
     branches: [ "main" ]
@@ -13,7 +8,7 @@ on:
 
 jobs:
   build:
-    name: python-${{ matrix.os }}
+    name: ${{ matrix.os }} python-${{ matrix.python-version }}
     
     strategy:
       matrix:
@@ -29,34 +24,20 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Set up uv ${{ env.UV_VERSION }}
-      if: ${{ matrix.os == 'ubuntu-latest' || matrix.os == 'macos-latest' }}
-      run: curl -LsSf https://astral.sh/uv/${{ env.UV_VERSION }}/install.sh | sh
-
-    - name: Set up uv ${{ env.UV_VERSION }}
-      if: ${{ matrix.os == 'windows-latest' }}
-      run: irm https://astral.sh/uv/${{ env.UV_VERSION }}/install.ps1 | iex
-      shell: powershell
+    - name: Install uv
+      uses: astral-sh/setup-uv@v2
+      with:
+        version: "0.4.18"
+        enable-cache: true
+        cache-dependency-glob: "uv.lock"
 
     - name: Set up Python ${{ matrix.python-version }}
       run: uv python install ${{ matrix.python-version }}
-
-    - name: Restore uv cache
-      uses: actions/cache@v4
-      with:
-        path: ${{ env.UV_CACHE_DIR }}
-        key: uv-${{ runner.os }}-${{ hashFiles('uv.lock') }}
-        restore-keys: |
-          uv-${{ runner.os }}-${{ hashFiles('uv.lock') }}
-          uv-${{ runner.os }}
     
-    - name: Install
-      run: uv sync --extra ci --no-dev --locked
+    - name: Install the project
+      run: uv sync --all-extras --dev
 
     - name: Run tests & build
       run: |
         uv run pytest tests
         uv build
-
-    - name: Minimize uv cache
-      run: uv cache prune --ci
