--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,5 @@
 name: release
 
-env:
-  UV_VERSION: "0.4.9"
-  UV_LINK_MODE: copy
-
 on:
   release:
     types: [published]
@@ -21,8 +17,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up uv ${{ env.UV_VERSION }}
-        run: curl -LsSf https://astral.sh/uv/${{ env.UV_VERSION }}/install.sh | sh
+      - name: Install uv
+        uses: astral-sh/setup-uv@v2
+        with:
+          version: "0.4.18"
 
       - name: Build for distribution
         run: uv build
