--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ authors = [
     { name = "stefur", email = "stefan@furne.net" }
 ]
 dependencies = [
-    "requests>=2.31.0",
+    "requests>=2.32.3",
+    "requests-cache>=1.2.1",
 ]
 readme = "README.md"
 requires-python = ">= 3.9"
