First step towards v2 support

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ file = "src/pxwebpy/_version.py"
 
 [dependency-groups]
 dev = [
+    "ipykernel>=6.29.5",
     "pandas>=2.2.3",
     "pandas-stubs>=2.2.2.240807",
     "polars>=1.19.0",
