Colors, python-version and workflows

--- a/docs/_brand.yml
+++ b/docs/_brand.yml
@@ -2,8 +2,7 @@ color:
   palette:
     black: "#1A1A1A"
     white: "#FCFCFC"
-    green: "#d2f1d0"
-    dark-green: "#4a7c4b"
+    green: "#2c5545"
   foreground: black
   background: white
   primary: green
@@ -12,8 +11,6 @@ typography:
   fonts:
     - family: Fira Code
       source: google
-  link:
-    color: dark-green
 
   base: Arial
   headings:
