--- a/docs/_quarto.yml
+++ b/docs/_quarto.yml
@@ -1,6 +1,7 @@
 project:
   type: website
   output-dir: _site
+  pre-render: version_config.py
 
 encoding: utf-8
 
@@ -16,7 +17,7 @@ format:
 brand: _brand.yml
 
 website:
-  title: "pxwebpy"
+  title: "pxwebpy {{< env VERSION >}}"
   description: "Getting data from the PxWeb API into a dataframe"
   repo-url: https://github.com/stefur/pxwebpy
   repo-actions: [issue]
