--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Build docs
         run: |
-          uv sync --dev
+          uv sync --dev --frozen
           cd docs && uv run quartodoc build
 
       - name: Render and publish
