--- a/docs/_quarto.yml
+++ b/docs/_quarto.yml
@@ -18,7 +18,7 @@ brand: _brand.yml
 
 website:
   title: "pxwebpy {{< env VERSION >}}"
-  description: "Getting data from the PxWeb API into a dataframe"
+  description: "Python bindings for the PxWeb API to easily get data into a dataframe."
   repo-url: https://github.com/stefur/pxwebpy
   repo-actions: [issue]
   page-navigation: true
@@ -40,7 +40,7 @@ website:
 
 quartodoc:
   title: Reference
-  package: pxwebpy
+  package: pxweb
   options:
     include_attributes: false
     dynamic: false
@@ -58,5 +58,5 @@ filters:
 
 interlinks:
   aliases:
-    pxwebpy: null
+    pxweb: null
   autolink: true
