--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,13 @@
 [project]
 name = "pxwebpy"
 dynamic = ["version"]
-description = "Get data from PxWeb API easily."
+description = "Client library for the PxWeb API to easily load data into a DataFrame."
 license = "MIT"
 repository = "https://github.com/stefur/pxwebpy/"
 keywords = ["pxweb", "statistics", "dataframes", "pandas", "polars"]
 classifiers = [
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3 :: Only",
-    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
@@ -22,7 +21,7 @@ dependencies = [
     "requests-cache>=1.2.1",
 ]
 readme = "README.md"
-requires-python = ">= 3.9"
+requires-python = ">= 3.10"
 
 [project.urls]
 Repository = "https://github.com/stefur/pxwebpy"
@@ -35,17 +34,27 @@ build-backend = "hatchling.build"
 source = "versioningit"
 
 [tool.hatch.build]
-artifacts = ["src/pxwebpy/_version.py"]
+artifacts = ["src/pxweb/_version.py"]
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/pxweb"]
 
 [tool.versioningit.write]
-file = "src/pxwebpy/_version.py"
+file = "src/pxweb/_version.py"
 
 [dependency-groups]
 dev = [
+    "ipykernel>=6.29.5",
+    "nbclient>=0.10.2",
+    "nbformat>=5.10.4",
     "pandas>=2.2.3",
     "pandas-stubs>=2.2.2.240807",
     "polars>=1.19.0",
+    "pyarrow>=21.0.0",
     "pytest>=8.3.4",
+    "pytest-cov>=6.2.1",
+    "quartodoc>=0.11.1",
+    "rich>=14.1.0",
     "syrupy>=4.8.0",
     "types-requests>=2.32.0.20241016",
 ]
