--- a/docs/_quarto.yml
+++ b/docs/_quarto.yml
@@ -18,7 +18,7 @@ brand: _brand.yml
 
 website:
   title: "pxwebpy {{< env VERSION >}}"
-  description: "Python bindings for the PxWeb API to easily get data into a dataframe."
+  description: "Client library for the PxWeb API to easily load data into a DataFrame."
   repo-url: https://github.com/stefur/pxwebpy
   repo-actions: [issue]
   page-navigation: true
