--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,6 +63,7 @@ dev = [
     "pytest-cov>=6.2.1",
     "quartodoc>=0.11.1",
     "rich>=14.1.0",
+    "ruff>=0.14.4",
     "syrupy>=4.8.0",
     "types-requests>=2.32.0.20241016",
 ]
