--- a/docs/_quarto.yml
+++ b/docs/_quarto.yml
@@ -32,6 +32,8 @@ website:
         file: index.qmd
       - text: "Examples"
         file: examples.qmd
+      - text: "Development"
+        file: development.qmd
       - text: "Reference"
         file: reference/index.qmd
     right:
