--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ authors = [
     { name = "Stefan Furne", email = "stefan@furne.net" }
 ]
 dependencies = [
+    "packaging>=25.0",
     "requests>=2.32.3",
     "requests-cache>=1.2.1",
 ]
