--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -13,11 +13,11 @@ jobs:
       contents: write
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
         with:
           fetch-depth: 0
 
-      - name: Install Python and dependencies
+      - name: Install Python
         uses: actions/setup-python@v5
         with:
           python-version-file: ".python-version"
@@ -25,14 +25,14 @@ jobs:
       - name: Install uv
         uses: astral-sh/setup-uv@v6
         with:
-          version: "0.8.3"
+          version: "0.9.11"
 
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
 
       - name: Build docs
         run: |
-          uv sync --dev --frozen
+          uv sync --locked
           cd docs && uv run quartodoc build
 
       - name: Render and publish
