--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,7 @@ jobs:
         run: |
           uv run nox -s tests
       
-      - name: Build
+      - name: Build & smoke test
         run: |
           uv build
+          uv run --isolated --no-project --with dist/*.whl tests/smoke_test.py
