--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,7 @@ jobs:
           uv run nox -s tests
       
       - name: Build & smoke test
+        shell: bash
         run: |
           uv build
           uv run --isolated --no-project --with dist/*.whl tests/smoke_test.py
