--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   build:
-    name: ${{ matrix.os }} python-${{ matrix.python-version }}
+    name: ${{ matrix.os }}
 
     strategy:
       matrix:
@@ -17,32 +17,38 @@ jobs:
           - ubuntu-latest
           - windows-latest
           - macos-latest
-        python-version: ["3.10", "3.11", "3.12", "3.13"]
       fail-fast: false
 
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
         with:
           fetch-depth: 0
 
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v5
+      - name: Install Python
+        uses: actions/setup-python@v6
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version-file: ".python-version"
 
       - name: Install uv
         uses: astral-sh/setup-uv@v6
         with:
-          version: "0.8.3"
+          version: "0.9.11"
           enable-cache: true
           cache-dependency-glob: "uv.lock"
-          python-version: ${{ matrix.python-version }}
 
       - name: Install the project
-        run: uv sync --dev --frozen
+        run: uv sync --locked
+      
+      - name: Lint
+        uses: astral-sh/ruff-action@v3
 
-      - name: Run tests & build
+      - name: Run tests
         run: |
-          uv run pytest
+          uv run nox -s tests
+      
+      - name: Build & smoke test
+        shell: bash
+        run: |
           uv build
+          uv run --isolated --no-project --with dist/*.whl tests/smoke_test.py
