--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,6 +59,8 @@ dev = [
     "ipykernel>=6.29.5",
     "nbclient>=0.10.2",
     "nbformat>=5.10.4",
+    "nox>=2025.11.12",
+    "nox-uv>=0.6.3",
     "pandas>=2.2.3",
     "pandas-stubs>=2.2.2.240807",
     "polars>=1.19.0",
