--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.14",
 ]
 authors = [
     { name = "Stefan Furne", email = "stefan@furne.net" }
@@ -65,7 +66,7 @@ dev = [
     "pandas-stubs>=2.2.2.240807",
     "polars>=1.19.0",
     "pre-commit>=4.4.0",
-    "pyarrow>=21.0.0",
+    "pyarrow>=22.0.0",
     "pytest>=8.3.4",
     "pytest-cov>=6.2.1",
     "quartodoc>=0.11.1",
